--- a/mod2_assignment/css/style.css
+++ b/mod2_assignment/css/style.css
@@ -2,13 +2,14 @@
   box-sizing: border-box;
 }
 h1 {
+  
   text-align: center;
   margin-bottom: 15px;
 }
   
   section{
   border: 1px solid black;
-  background-color:grey;
+  background-color: yellow;
   height:250px;
   overflow: auto;
   
@@ -38,12 +39,12 @@ h1 {
   background-color: #DEB887;
   
 }
-#Pasta {
-background-color: brown;
+#Burger {
+background-color: blue;
 }
 
 
-/* Simple Responsive Framework. */
+
 
 
 /********** Desktop devices only **********/
