--- a/mod3_assignment/css/style.css
+++ b/mod3_assignment/css/style.css
@@ -41,17 +41,17 @@ section {
 }
 
 #chicken {
-	border: 1px solid black;
+	border: 1px;
 	text-align: center;
 	width: 30%;
 	margin-left: 70%;
-	font-family: Georgia,sans-serif;
+	font-family:Arial, Helvetica, sans-serif ;
 	font-weight: bold;
 	font-size: 125%;
 	margin-bottom: 0;
 	margin-top: 0;
 	padding: 5px;
-	background-color: #FFFF00;
+	background-color: orange;
 }
 
 #beef {
