--- a/mod3_assignment/css/style.css
+++ b/mod3_assignment/css/style.css
@@ -5,7 +5,7 @@
 }
 
 h1 {
-	font-family: Brushstroke, fantasy;
+	font-family: Helvetica, sans-serif;
 	color: #000000;
 }
 
@@ -45,41 +45,39 @@ section {
 	text-align: center;
 	width: 30%;
 	margin-left: 70%;
-	font-family:Arial, Helvetica, sans-serif ;
+	font-family:Arial,sans-serif ;
 	font-weight: bold;
 	font-size: 125%;
 	margin-bottom: 0;
 	margin-top: 0;
 	padding: 5px;
-	background-color: orange;
+	
 }
 
 #beef {
-	border: 1px solid black;
+	border: 1px;
 	text-align: center;
 	width: 30%;
 	margin-left: 70%;
-	font-family: Georgia,sans-serif;
+	font-family: Ariel,sans-serif;
 	font-weight: bold;
 	font-size: 125%;
 	margin-bottom: 0;
 	margin-top: 0;
 	padding: 5px;
-	background-color: #FF1439;
+	
 }
 
 #sushi {
-	border: 1px solid black;
+	border: 1px;
 	text-align: center;
 	width: 30%;
 	margin-left: 70%;
-	font-family: Georgia,sans-serif;
+	font-family: Ariel,sans-serif;
 	font-weight: bold;
 	font-size: 125%;
 	margin-bottom: 0;
 	margin-top: 0;
-	background-color: #6495ED;
-	color: white;
 	padding: 5px;
 }
 
@@ -101,17 +99,17 @@ section {
 .navbar-brand {
   font-size: 2em;
   border: 0 0 10px 10px;
-  color: #FFFFFF;
+  color: blue;
 }
 
 #header-nav {
   border: 0;
   background-color: #FC5F06;
-  color: #FFFFFF;
+  color: yellow;
 }
 
 .navbar-header button.navbar-toggle, .navbar-header .icon-bar {
-  border: 1px solid #61122f;
+  border: 1px solid blue;
 }
 .navbar-header button.navbar-toggle {
   clear: both;
@@ -119,11 +117,11 @@ section {
 }
 
 .nav-header {
-  background-color: #FFFFFF;
+  background-color: blue;
 }
 
 .nav-brand {
-  color: #FFFFFF;
+  color:white;
   font-size: 1.5em;
 }
 
@@ -132,10 +130,10 @@ section {
 }
 
 hr {
-  border-color: white;
+  border-color: black;
 }
 
 .item {
-  color: white;
+  color: yellow;
   font-size: 1.2em;
 }
